--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,3 +16,31 @@ body {
     border: 1px solid #fff;
     border-radius: 1rem;
 }
+
+.main::before {
+    content: "";
+    background-image: url('../img/background.svg');
+    width: 140vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+.main::after {
+    content: "";
+    background-image: url('../img/background.svg');
+    width: 140vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    transform: rotate(180deg);
+}
