--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17,7 +17,7 @@ body {
     border-radius: 1rem;
 }
 
-.main::before {
+.main::before, .main::after {
     content: "";
     background-image: url('../img/background.svg');
     width: 140vw;
@@ -31,16 +31,19 @@ body {
     z-index: -1;
 }
 .main::after {
-    content: "";
-    background-image: url('../img/background.svg');
-    width: 140vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: contain;
-    display: inline-block;
-    position: fixed;
     bottom: 0;
     right: 0;
-    z-index: -1;
+    top: auto;
+    left: auto;
     transform: rotate(180deg);
+}
+
+@media only screen and (min-width: 768px) {
+    .main {
+        max-width: 1024px;
+        margin: 1rem auto;
+    }
+    .main::before, .main::after {
+        width: 70vw;
+    }
 }
