--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -51,3 +51,25 @@
 .information .number::before {
     background-image: url(../img/icons/number.svg);
 }
+@media only screen and (min-width: 768px) {
+    .header {
+        display: grid;
+        grid-template-areas:
+        "my-photo title"
+        "my-photo information"
+        ;
+    }
+    .header .my-photo {
+        grid-area: my-photo;
+        margin: 0 auto;
+
+    }
+    .header > h1 {
+        grid-area: title;
+        text-align: start;
+        max-width: 210px;
+    }
+    .information {
+        grid-area: information;
+    }
+}
