add header icon

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,10 +2,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .header > h1 {
     font-family: "Neue Machina";
+}
+
+.header::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url(../img/icons/header.svg);
 }
 
 .header .my-photo {
