--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -25,6 +25,13 @@
     color: #fff;
     border: none;
 }
+
+.acordeon h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    text-align: start;
+}
+
 .acordeon .trigger:hover {
     cursor: pointer;
 }
@@ -46,14 +53,14 @@
 
 .acordeon .content {
     overflow: hidden;
-    padding: 1rem;
     height: 0;
     opacity: 0;
     transition: opacity .25s ease-in-out;
 }
 
 .acordeon.open .content {
-    display: inline-block;
+    display: block;
+    padding: 0 1rem 1rem 3rem;
     height: auto;
     opacity: 1;
 }
