--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -1,28 +1,28 @@
-.languages {
+.experience {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     list-style: none;
 }
-.languages li{
+
+.experience li {
+    margin-bottom: 1rem;
+}
+
+.experience li .period {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-right: 1rem;
-    font-weight: 700;
-    font-size: 1rem;
 }
 
-.languages li::before {
+.experience li .period::before {
     content: '';
     display: inline-block;
-    height: 1rem;
     width: 1rem;
+    height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(../img/icons/check.svg);
+    background-image: url(../img/icons/calendar.svg);
     margin-right: .5rem;
 }
